--- a/sails-sample-project-fe-master/views/create.ejs
+++ b/sails-sample-project-fe-master/views/create.ejs
@@ -1,52 +1,46 @@
 <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
-    <li class="active">Add Student</a></li>
+    <li class="active">Add Recipe</a></li>
 </ol>
 
 <br/>
 <%- partial ('partials/statusmessage.ejs') %>
 
-<h2>Add Student</h2>
-<form action="/create" method="POST" class="form-horizontal" id="addStudentForm">
+<h2>Add Recipe</h2>
+<form action="/create" method="POST" class="form-horizontal" id="addRecipeForm">
   <div class="form-group">
-    <label for="first_name" class="col-sm-2 control-label">First Name</label>
+    <label for="title" class="col-sm-2 control-label">Title</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" required>
+      <input type="text" class="form-control" id="title" name="title" placeholder="example">
     </div>
   </div>
   <div class="form-group">
-    <label for="last_name" class="col-sm-2 control-label">Last Name</label>
+    <label for="description" class="col-sm-2 control-label">Description</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="last_name" name="last_name"  placeholder="Last Name" required>
+      <input type="text" class="form-control" id="description" name="description" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
-    <label for="start_date" class="col-sm-2 control-label">Start Date</label>
+    <label for="numberOfMinutes" class="col-sm-2 control-label">Number of Minutes</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
+      <input type="text" class="form-control" id="numberOfMinutes" name="numberOfMinutes"  placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
-    <label for="gpa" class="col-sm-2 control-label">GPA</label>
+    <label for="ingredients" class="col-sm-2 control-label">Ingredients </label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="gpa" name="gpa" placeholder="4.0">
+      <input type="text" class="form-control" id="ingredients" name="ingredients" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
-    <label for="sat" class="col-sm-2 control-label">SAT Score</label>
+    <label for="instructions" class="col-sm-2 control-label">Instructions</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="sat" name="sat" placeholder="1400">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major ID</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="major_id" name="major_id">
+      <input type="text" class="form-control" id="instructions" name="instructions" placeholder="example">
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Add Student</button>
+      <button type="submit" class="btn btn-default">Add Recipe</button>
     </div>
   </div>
 </form>
