--- a/sails-sample-project-fe-master/views/update.ejs
+++ b/sails-sample-project-fe-master/views/update.ejs
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
-    <li class="active">Edit Student</a></li>
+    <li class="active">Edit Recipe</a></li>
 </ol>
 
 <br/>
@@ -8,12 +8,12 @@
 
 <form action="#" method="">
   <div class="form-group">
-    <label for="student_id">SELECT AN STUDENT TO UPDATE</label><br/>
-    <select id="student_id" name="student_id">
-    <% if(typeof students != "undefined" && students.length > 0){ %>
-      <% students.forEach(function(student){ %>
-        <option value="<%= student.student_id %>">
-          <%= student.last_name + ", " +  student.first_name %>
+    <label for="recipe_id">Select A Recipe To UpdateE</label><br/>
+    <select id="recipe_id" name="recipe_id">
+    <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
+      <% recipes.forEach(function(recipe){ %>
+        <option value="<%= recipe.recipe_id %>">
+          <%= recipe.last_name + ", " +  recipe.first_name %>
         </option>
       <% }) %>
     <% } %>
@@ -21,48 +21,42 @@
   </div>
 </form>
 
-<h2>Update Student</h2>
-<form action="/update" method="POST" class="form-horizontal" id="updateStudentForm">
-  <input type="hidden" name="student_id" id="student_id" value="">
+<h2>Update Recipe</h2>
+<form action="/update" method="POST" class="form-horizontal" id="updateRecipeForm">
+  <input type="hidden" name="recipe_id" id="recipe_id" value="">
   <div class="form-group">
-    <label for="first_name" class="col-sm-2 control-label">First Name</label>
+    <label for="title" class="col-sm-2 control-label">Title</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" required>
+      <input type="text" class="form-control" id="title" name="title" placeholder="example">
     </div>
   </div>
   <div class="form-group">
-    <label for="last_name" class="col-sm-2 control-label">Last Name</label>
+    <label for="description" class="col-sm-2 control-label">Description</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="last_name" name="last_name"  placeholder="Last Name" required>
+      <input type="text" class="form-control" id="description" name="description" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
-    <label for="start_date" class="col-sm-2 control-label">Email Address</label>
+    <label for="numberOfMinutes" class="col-sm-2 control-label">Number of Minutes</label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="start_date" name="start_date" placeholder="2017-01-01" required>
+      <input type="text" class="form-control" id="numberOfMinutes" name="numberOfMinutes"  placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
-    <label for="gpa" class="col-sm-2 control-label">GPA</label>
+    <label for="ingredients" class="col-sm-2 control-label">Ingredients </label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="gpa" name="gpa" placeholder="4.0">
+      <input type="text" class="form-control" id="ingredients" name="ingredients" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
-    <label for="sat" class="col-sm-2 control-label">SAT Score</label>
+    <label for="instructions" class="col-sm-2 control-label">Instructions</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="sat" name="sat" placeholder="1400">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="major_id" class="col-sm-2 control-label">Major ID</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="major_id" name="major_id">
+      <input type="text" class="form-control" id="instructions" name="instructions" placeholder="example">
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Update Student</button>
+      <button type="submit" class="btn btn-default">Add Recipe</button>
     </div>
   </div>
 </form>
