--- a/sails-sample-project-fe-master/views/create.ejs
+++ b/sails-sample-project-fe-master/views/create.ejs
@@ -6,6 +6,7 @@
 <br/>
 <%- partial ('partials/statusmessage.ejs') %>
 
+<!-- add recipe form -->
 <h2>Add Recipe</h2>
 <form action="/create" method="POST" class="form-horizontal" id="addRecipeForm">
   <div class="form-group">
@@ -24,12 +25,6 @@
     <label for="numberOfMinutes" class="col-sm-2 control-label">Number of Minutes</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="numberOfMinutes" name="numberOfMinutes"  placeholder="example" required>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="ingredients" class="col-sm-2 control-label">Ingredients </label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="ingredients" name="ingredients" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
