--- a/sails-sample-project-fe-master/views/update.ejs
+++ b/sails-sample-project-fe-master/views/update.ejs
@@ -8,7 +8,7 @@
 
 <form action="#" method="">
   <div class="form-group">
-    <label for="recipe_id">Select A Recipe To UpdateE</label><br/>
+    <label for="recipe_id">Select A Recipe To Update</label><br/>
     <select id="recipe_id" name="recipe_id">
     <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
       <% recipes.forEach(function(recipe){ %>
