--- a/sails-sample-project-fe-master/views/layout.ejs
+++ b/sails-sample-project-fe-master/views/layout.ejs
@@ -52,7 +52,8 @@
             <script src="js/create.js"></script>
             <script src="js/delete.js"></script>
             <script src="js/update.js"></script>
-
+            <script src="js/ingredients.js"></script>
+            <script src="js/instructions.js"></script>
         <!-- INCLUDE JS LIBRARIES HERE END -->
 
     </body>
