--- a/sails-sample-project-fe-master/views/create_ingredients.ejs
+++ b/sails-sample-project-fe-master/views/create_ingredients.ejs
@@ -7,7 +7,7 @@
 <%- partial ('partials/statusmessage.ejs') %>
 
 <!-- //Adding ingredients form -->
-<h2> Add </h2>
+<h2>Add Ingredients</h2>
 <select id="recipe_id" name="recipe_id">
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
@@ -16,7 +16,23 @@
           </option>
         <% }) %>
       <% } %>
-      </select>
+  </select>
+
+<div>
+<table>
+  <thead>
+    <tr>
+      <th>Ingredient Name</th>
+      <th> Unit Of Measure</th>
+      <th>Quantity</th>
+    </tr>
+  </thead>
+  <tbody id="ingredientList">
+  </tbody>
+</table>
+</div>
+
+
 <form action="/create" method="POST" class="form-horizontal" id="addIngredientForm">
   <div class="form-group">
     <label for="ingredient_name" class="col-sm-2 control-label">Ingredients</label>
@@ -38,7 +54,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Add Ingredient</button>
+      <button type="submit" class="btn btn-default" id="ingredientsButton">Add Ingredient</button>
     </div>
   </div>
 </form>
