--- a/sails-sample-project-fe-master/views/create_instructions.ejs
+++ b/sails-sample-project-fe-master/views/create_instructions.ejs
@@ -18,16 +18,29 @@
         <% }) %>
       <% } %>
       </select>
+
+      <div>
+      <table>
+        <thead>
+          <tr>
+            <th>Step Number</th>
+            <th> Instruction</th>
+          </tr>
+        </thead>
+        <tbody id="instructionsList">
+        </tbody>
+      </table>
+      </div>
 <form action="/create" method="POST" class="form-horizontal" id="addInstructionsForm">
   <div class="form-group">
-    <label for="instructions" class="col-sm-2 control-label">Ingredients </label>
+    <label for="instructions" class="col-sm-2 control-label">Instruction</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="instructions" name="instructions" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Add Instructions</button>
+      <button type="submit" class="btn btn-default" id="instructionsButton">Add Instructions</button>
     </div>
   </div>
 </form>
