--- a/sails-sample-project-fe-master/views/partials/navigation.ejs
+++ b/sails-sample-project-fe-master/views/partials/navigation.ejs
@@ -7,20 +7,33 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img alt="The Iron Yard" src="images/tiy_logo.png"/></a>
+            <a class="navbar-brand" href="#"><img alt="Chef" src="images/overcooked.png" id="pageLogo"/></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/create">Add Recipe</a></li>
-                <li><a href="/update">Edit Recipe</a></li>
-                <li><a href="delete">Delete Recipe</a></li>
                 <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="/create">Add Recipe</a></li>
-                    <li><a href="/update">Edit Recipe</a></li>
+                    <li><a href="/create_ingredients">Add Ingredients</a></li>
+                    <li><a href="/create_instructions">Add Instructions</a></li>
+                </ul>
+                </li>
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Edit<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/create">Edit Recipe</a></li>
+                    <li><a href="/update">Edit Ingredients</a></li>
+                    <li><a href="/delete">Edit Instructions</a></li>
+                </ul>
+                </li>
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Delete<span class="caret"></span></a>
+                <ul class="dropdown-menu">
                     <li><a href="/delete">Delete Recipe</a></li>
+                    <li><a href="/delete_ingredients">Delete Ingredients</a></li>
+                    <li><a href="/delete_instructions">Delete Instructions</a></li>
                 </ul>
                 </li>
             </ul>
