--- a/sails-sample-project-fe-master/views/read.ejs
+++ b/sails-sample-project-fe-master/views/read.ejs
@@ -22,7 +22,7 @@
   <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
     <% recipes.forEach(function(recipe){ %>
       <tr>
-        <td><%= recipe.recipe_id %></td>
+        <td><%= recipe.id %></td>
         <td><%= recipe.title %></td>
         <td><%= recipe.description %></td>
         <td><%= recipe.numberOfMinutes %></td>
