--- a/sails-sample-project-fe-master/views/delete.ejs
+++ b/sails-sample-project-fe-master/views/delete.ejs
@@ -12,11 +12,11 @@
 <div style="text-align: center; padding-top:50px">
   <form action="/delete" method="POST">
     <div class="form-group">
-      <label for="recipe_id">SELECT A RECIPE TO DELETE</label><br/>
-      <select id="recipe_id" name="recipe_id">
+      <label for="id">SELECT A RECIPE TO DELETE</label><br/>
+      <select id="id" name="id">
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
-          <option value="<%= recipe.recipe_id %>">
+          <option value="<%= recipe.id %>">
             <%= recipe.title %>
           </option>
         <% }) %>
