view details issue

--- a/sails-sample-project-fe-master/views/delete_ingredients.ejs
+++ b/sails-sample-project-fe-master/views/delete_ingredients.ejs
@@ -7,7 +7,7 @@
 <%- partial ('partials/statusmessage.ejs') %>
 
 <!-- //Adding ingredients form -->
-<h2>Add Ingredients</h2>
+<h2>Delete Ingredients</h2>
 <select id="recipe_id" name="recipe_id">
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
