--- a/sails-sample-project-fe-master/views/delete_instructions.ejs
+++ b/sails-sample-project-fe-master/views/delete_instructions.ejs
@@ -8,7 +8,7 @@
 
 
 <!-- //Adding instructions form -->
-<h2> Add Instructions</h2>
+<h2> Delete Instructions</h2>
 <select id="recipe_id" name="recipe_id">
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
