--- a/sails-sample-project-fe-master/views/layout.ejs
+++ b/sails-sample-project-fe-master/views/layout.ejs
@@ -54,6 +54,7 @@
             <script src="js/update.js"></script>
             <script src="js/ingredients.js"></script>
             <script src="js/instructions.js"></script>
+            <script src="js/details.js"></script>
         <!-- INCLUDE JS LIBRARIES HERE END -->
 
     </body>
