--- a/sails-sample-project-fe-master/views/create_ingredients.ejs
+++ b/sails-sample-project-fe-master/views/create_ingredients.ejs
@@ -8,10 +8,11 @@
 
 <!-- //Adding ingredients form -->
 <h2>Add Ingredients</h2>
-<select id="recipe_id" name="recipe_id">
+<select id="recipe_id" name="id">
+      <option value="">Choose a recipe</option>
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
-          <option value="<%= recipe.recipe_id %>">
+          <option value="<%= recipe.id %>">
             <%= recipe.title %>
           </option>
         <% }) %>
@@ -33,11 +34,11 @@
 </div>
 
 
-<form action="/create" method="POST" class="form-horizontal" id="addIngredientForm">
+<form action="/recipe/:id/create_ingredients" method="POST" class="form-horizontal" id="addIngredientForm">
   <div class="form-group">
     <label for="ingredient_name" class="col-sm-2 control-label">Ingredients</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="ingredient_name" name="ingredient_name" placeholder="example" required>
+      <input type="text" class="form-control" id="foodItem" name="foodItem" placeholder="example" required>
     </div>
   </div>
   <div class="form-group">
@@ -49,7 +50,7 @@
   <div class="form-group">
     <label for="unitOfMeasure" class="col-sm-2 control-label">Unit of Measure</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="unitOfMeasure" name="unitOfMeasure" placeholder="example">
+      <input type="text" class="form-control" id="measureUnit" name="measureUnit" placeholder="example">
     </div>
   </div>
   <div class="form-group">
