--- a/sails-sample-project-fe-master/views/delete_ingredients.ejs
+++ b/sails-sample-project-fe-master/views/delete_ingredients.ejs
@@ -8,10 +8,10 @@
 
 <!-- //Adding ingredients form -->
 <h2>Delete Ingredients</h2>
-<select id="recipe_id" name="recipe_id">
+<select id="recipe_chooser_destroyer" name="recipe_id">
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
-          <option value="<%= recipe.id %>">
+          <option value="<%= encodeURI(JSON.stringify(recipe)) %>">
             <%= recipe.title %>
           </option>
         <% }) %>
@@ -20,14 +20,10 @@
 
 <div>
 <table>
-  <thead>
-    <tr>
-      <th>Ingredient Name</th>
-      <th> Unit Of Measure</th>
-      <th>Quantity</th>
-    </tr>
-  </thead>
-  <tbody id="deleteIngredientList">
-  </tbody>
+<thead>
+</thead>
+<tbody id="deleteIngredientsTable">
+</tbody>
 </table>
+
 </div>
