--- a/sails-sample-project-fe-master/views/read.ejs
+++ b/sails-sample-project-fe-master/views/read.ejs
@@ -25,7 +25,7 @@
         <td><%= recipe.title %></td>
         <td><%= recipe.description %></td>
         <td><%= recipe.numberOfMinutes %></td>
-        <td><button type=“submit” class=“btn btn-default viewButtons” data-recipeid=“<%= recipe.id %>“>View Details</button></td>
+        <td><button type="submit" class="btn btn-default viewButtons" data-recipeid="<%= recipe.id %>">View Details</button></td>
       </tr>
     <% }) %>
   <% } %>
@@ -36,6 +36,8 @@
   <thead>
   </thead>
  <tbody id='viewDetails'>
+
+   
  </tbody>
 </table>
 </div>
