--- a/sails-sample-project-fe-master/views/create_ingredients.ejs
+++ b/sails-sample-project-fe-master/views/create_ingredients.ejs
@@ -19,38 +19,24 @@
       <% } %>
   </select>
 
-<div>
-<table>
-  <thead>
-    <tr>
-      <th>Ingredient Name</th>
-      <th> Unit Of Measure</th>
-      <th>Quantity</th>
-    </tr>
-  </thead>
-  <tbody id="ingredientList">
-  </tbody>
-</table>
-</div>
-
 
 <form action="/recipe/:id/create_ingredients" method="POST" class="form-horizontal" id="addIngredientForm">
   <div class="form-group">
     <label for="ingredient_name" class="col-sm-2 control-label">Ingredients</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="foodItem" name="foodItem" placeholder="example" required>
+      <input type="text" class="form-control" id="foodItem" name="foodItem" placeholder="ex. milk" required>
     </div>
   </div>
   <div class="form-group">
     <label for="quantity" class="col-sm-2 control-label">Quantity</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="quantity" name="quantity" placeholder="example">
+      <input type="text" class="form-control" id="quantity" name="quantity" placeholder="ex. 1/2">
     </div>
   </div>
   <div class="form-group">
     <label for="unitOfMeasure" class="col-sm-2 control-label">Unit of Measure</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="measureUnit" name="measureUnit" placeholder="example">
+      <input type="text" class="form-control" id="measureUnit" name="measureUnit" placeholder="ex. cups">
     </div>
   </div>
   <div class="form-group">
