--- a/sails-sample-project-fe-master/views/create_instructions.ejs
+++ b/sails-sample-project-fe-master/views/create_instructions.ejs
@@ -10,6 +10,7 @@
 <!-- //Adding instructions form -->
 <h2> Add Instructions</h2>
 <select id="recipe_id" name="id">
+  <option value="">Choose a recipe</option>
       <% if(typeof recipes != "undefined" && recipes.length > 0){ %>
         <% recipes.forEach(function(recipe){ %>
           <option value="<%= recipe.id %>">
@@ -19,23 +20,12 @@
       <% } %>
       </select>
 
-      <div>
-      <table>
-        <thead>
-          <tr>
-            <th>Step Number</th>
-            <th> Instruction</th>
-          </tr>
-        </thead>
-        <tbody id="instructionsList">
-        </tbody>
-      </table>
-      </div>
+
 <form action="/recipe/:id/create_instructions" method="POST" class="form-horizontal" id="addInstructionsForm">
   <div class="form-group">
     <label for="instructions" class="col-sm-2 control-label">Instruction</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="step" name="step" placeholder="example" required>
+      <input type="text" class="form-control" id="step" name="step" placeholder="ex. Preheat Oven to 350 degrees" required>
     </div>
   </div>
   <div class="form-group">
